--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "dependencies": {
     "a": "^3.0.1",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "faker": "^6.6.6",
     "mongoose": "^7.5.2",
     "mongoose-paginate-v2": "^1.7.4",
     "nodemon": "^3.0.1",
@@ -31,5 +34,8 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
