--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ passAdm =admincod3r123
 clientID=Iv1.4f822ce5bbef0583
 callbackSecret=a2b5e89373b06df83d95e582541a149bb3221e7b
 callbackURL=http://localhost:8080/api/sessions/githubcallback
-
+ENVIRONMENT=PROD
